--- a/NetEvent/Server/appsettings.json
+++ b/NetEvent/Server/appsettings.json
@@ -8,12 +8,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "IdentityServer": {
-    "Clients": {
-      "NetEvent.Client": {
-        "Profile": "IdentityServerSPA"
-      }
-    }
+  "oidc": {
+    "Authority": "https://localhost:5001/",
+    "ClientId": "NetEventClient",
+    "DefaultScopes": [
+      "openid",
+      "profile"
+    ],
+    "PostLogoutRedirectUri": "/",
+    "RedirectUri": "https://localhost:5003/authentication/login-callback",
+    "ResponseType": "code"
   },
   "AllowedHosts": "*"
 }
