--- a/NetEvent/Client/wwwroot/appsettings.json
+++ b/NetEvent/Client/wwwroot/appsettings.json
@@ -1,13 +1,8 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "oidc": {
     "Authority": "https://localhost:5001/",
     "ClientId": "NetEventClient",
+    "ClientSecret": "901564A5-E7FE-42CB-B10D-61EF6A8F3654",
     "DefaultScopes": [
       "openid",
       "profile"
