changed to sqlite

--- a/NetEvent/Server/appsettings.json
+++ b/NetEvent/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-NetEvent.Server-3D9070FD-ABF7-43E4-A1EB-28CB9D8071DF;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=netevent.db"
   },
   "Logging": {
     "LogLevel": {
