--- a/NetEvent/Server/appsettings.json
+++ b/NetEvent/Server/appsettings.json
@@ -5,7 +5,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "OpenIddict": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
