--- a/NetEvent/Client/NetEvent.Client.csproj
+++ b/NetEvent/Client/NetEvent.Client.csproj
@@ -15,16 +15,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AdditionalFiles Include="UserAdded.graphql">
-      <GraphQL>true</GraphQL>
-    </AdditionalFiles>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="GetUsers.graphql" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" PrivateAssets="all" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="6.0.0" />
@@ -43,6 +33,10 @@
 
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="GraphQL\" />
   </ItemGroup>
 
 </Project>
