--- a/.github/workflows/website_build.yml
+++ b/.github/workflows/website_build.yml
@@ -20,7 +20,7 @@ jobs:
 
   build_only:
     runs-on: ubuntu-latest
-    if: ${{ (!startsWith(github.ref, 'refs/tags/v')) && (!contains(github.event.head_commit.message, 'forcepublish')) && github.event_name == 'pull_request'}}
+    if: ${{ ((!startsWith(github.ref, 'refs/tags/v')) && (!contains(github.event.head_commit.message, 'forcepublish')) && github.event_name == 'pull_request') || (((!startsWith(github.ref, 'refs/tags/v')) && (!contains(github.event.head_commit.message, 'forcepublish')) && github.event_name == 'push' ) || (startsWith(github.ref, 'refs/tags/v') && github.event_name == 'push' && (contains(github.ref, '-beta')))) }}
     steps:
     - uses: actions/checkout@v3
     - uses: nikeee/docfx-action@v1.0.0
