--- a/Docs/toc.yml
+++ b/Docs/toc.yml
@@ -2,5 +2,7 @@
   href: index.md
 - name: Users Guide
   href: user/
-- name: Admin Guide
+- name: Admins Guide
   href: admin/
+- name: Developers Guide
+  href: develop/
