--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -84,14 +84,8 @@ jobs:
           submodules: recursive
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1.2.0
-      - name: Login to DockerHub
-        # if: ${{ (startsWith(github.ref, 'refs/tags/v')) }}
-        uses: docker/login-action@v1.14.1
-        with:
-          username: ${{ secrets.NETEVENT_DOCKERHUB_USERNAME }}
-          password: ${{ secrets.NETEVENT_DOCKERHUB_TOKEN }}
-      - name: Pull Latest Linux Base Image
-        run: docker pull lan2play/netevent
+      # - name: Pull Latest Linux Base Image
+      #   run: docker pull lan2play/netevent
       - name: Build Linux Image
         uses: docker/build-push-action@v2.10.0
         with:
@@ -107,6 +101,12 @@ jobs:
           no-cache: true
       # - name: Test Linux Image
       #   run: docker run --rm lan2play/netevent:latest /docker/test.sh
+      - name: Login to DockerHub
+        if: ${{ (startsWith(github.ref, 'refs/tags/v')) }}
+        uses: docker/login-action@v1.14.1
+        with:
+          username: ${{ secrets.NETEVENT_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.NETEVENT_DOCKERHUB_TOKEN }}
       - name: Push to Docker HUB
         if: ${{ (startsWith(github.ref, 'refs/tags/v')) }}
         run: docker push lan2play/netevent:latest
