added docker Database connection strings

--- a/NetEvent/Server/appsettings.json
+++ b/NetEvent/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=netevent.db"
+    "DefaultConnection": "Data Source=/data/netevent.db"
   },
   "Logging": {
     "LogLevel": {
