--- a/NetEvent/Server/appsettings.Development.json
+++ b/NetEvent/Server/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=netevent.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
