--- a/NetEvent/Server/appsettings.Development.json
+++ b/NetEvent/Server/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=netevent.db"
-  },
+  "DBProvider": "sqlite",
+  "DBConnection": "Data Source=netevent.db",
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
