--- a/NetEvent/Server/appsettings.json
+++ b/NetEvent/Server/appsettings.json
@@ -1,7 +1,6 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=/data/netevent.db"
-  },
+  "DBProvider": "sqlite",
+  "DBConnection": "Data Source=/data/netevent.db",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
