updated docker env

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DBServer=netevent_psql
 DBPort=5432
 DBUser=NETEVENTDBUSER
 DBPassword=NETEVENTDBPASSWORD
+TZ=Europe/Berlin
+ASPNETCORE_URLS=http://+:5000
