--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -9,6 +9,8 @@ on:
     - '**'
     - '!Docs/**'
     - '!packaging/Docs**'
+    - '!docker-compose.yml'
+    - '!.env.example.yml'
     - '!README.md'
     - '!.github/workflows/website_build.yml'
   pull_request:
@@ -20,6 +22,8 @@ on:
     - '**'
     - '!Docs/**'
     - '!packaging/Docs**'
+    - '!docker-compose.yml'
+    - '!.env.example.yml'
     - '!README.md'
     - '!.github/workflows/website_build.yml'
 
