added feature branches to pr and push builds

--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -4,6 +4,7 @@ on:
     branches: 
     - OpenIdDict
     - develop
+    - 'feature/**'
     tags: [ v**]
     paths:
     - '**'
@@ -17,6 +18,7 @@ on:
     branches: 
     - OpenIdDict
     - develop
+    - 'feature/**'
     tags: [ v**]
     paths:
     - '**'
