changed to current wait for in docker and implemented healthchecks

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+APPPort=5000
 DBProvider=psql
 DBName=NETEVENT
 DBServer=netevent_psql
@@ -5,4 +6,3 @@ DBPort=5432
 DBUser=NETEVENTDBUSER
 DBPassword=NETEVENTDBPASSWORD
 TZ=Europe/Berlin
-ASPNETCORE_URLS=http://+:5000
