--- a/.github/workflows/website_build.yml
+++ b/.github/workflows/website_build.yml
@@ -2,14 +2,14 @@ name: NetEvent_website_build
 
 on:
   push:
-    branches: [ OpenIdDict ]
+    branches: [ main ]
     tags: [ v**]
     paths:
     - 'Docs/**'
     - 'packaging/Docs/**'
     - '.github/workflows/website_build.yml'
   pull_request:
-    branches: [ OpenIdDict ]
+    branches: [ main ]
     tags: [ v**]
     paths:
     - 'Docs/**'
