--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -56,6 +56,7 @@ jobs:
             # mandatory
             -Dsonar.projectKey=Lan2Play_NetEvent
             -Dsonar.organization=lan2play
+            -Dsonar.scm.provider=git
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # When you need the analysis to take place in a directory other than the one from which it was launched
