--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -15,6 +15,7 @@ on:
     - '!README.md'
     - '!.github/workflows/website_build.yml'
   pull_request:
+    types: [opened, synchronize, reopened]
     branches: 
     - main
     - develop
@@ -34,16 +35,48 @@ jobs:
   test_linux_x64:
     runs-on: ubuntu-latest
     steps:
-    - name: checkout
-      uses: actions/checkout@v3
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: 6.x.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Test linux dotnet
-      run: dotnet test
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.11
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v1
+        with:
+          path: ~\sonar\cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache SonarCloud scanner
+        id: cache-sonar-scanner
+        uses: actions/cache@v1
+        with:
+          path: .\.sonar\scanner
+          key: ${{ runner.os }}-sonar-scanner
+          restore-keys: ${{ runner.os }}-sonar-scanner
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: 6.x.x
+      - name: Install SonarCloud scanner
+        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+        shell: pwsh
+        run: |
+          New-Item -Path ./sonar/scanner -ItemType Directory
+          dotnet tool install dotnet-sonarscanner --tool-path ./sonar/scanner
+      - name: Restore dependencies
+        run: dotnet restore
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          SONAR_TOKEN: ${{ secrets.NETEVENT_SONAR_TOKEN }}
+        shell: pwsh
+        run: |
+          ./sonar/scanner/dotnet-sonarscanner begin /k:"Lan2Play_NetEvent" /o:"lan2play" /d:sonar.login="${{ secrets.NETEVENT_SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+          dotnet build --no-restore
+          dotnet test --no-build --no-restore
+          ./sonar/scanner/dotnet-sonarscanner end /d:sonar.login="${{ secrets.NETEVENT_SONAR_TOKEN }}"      
 
   build_linux_x64:
     runs-on: ubuntu-latest
@@ -68,15 +101,8 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build linux dotnet
-      run: dotnet publish -r linux-x64 -c release --output Release -p:Version=$NETEVENTNETVER
-    # - name: copy linux x64
-    #   run: mkdir -p upload/linux_x64 && cp -rf ./Release/* upload/linux_x64/ && cd upload/linux_x64/ && rm -rf *.pdb && tar cfvz ../linux_x64.tar.gz *
-    # - name: upload artifact linux x64
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: latest_linux_x64
-    #     path: upload/
-    #     retention-days: 1
+      run: dotnet publish --no-restore -r linux-x64 -c release --output Release -p:Version=$NETEVENTNETVER
+
 
   build_docker_linux_x64:
     runs-on: ubuntu-latest
@@ -90,8 +116,8 @@ jobs:
           submodules: recursive
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1.2.0
-      # - name: Pull Latest Linux Base Image
-      #   run: docker pull lan2play/netevent
+      - name: Pull Latest Linux Base Image
+        run: docker pull lan2play/netevent
       - name: Build Linux Image
         uses: docker/build-push-action@v2.10.0
         with:
