--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -4,7 +4,6 @@ on:
     branches: 
     - main
     - develop
-    - 'feature/**'
     tags: [ v**]
     paths:
     - '**'
@@ -45,14 +44,14 @@ jobs:
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
-          path: ~\sonar\cache
+          path: ./sonar\cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
       - name: Cache SonarCloud scanner
         id: cache-sonar-scanner
         uses: actions/cache@v1
         with:
-          path: .\.sonar\scanner
+          path: ./sonar\scanner
           key: ${{ runner.os }}-sonar-scanner
           restore-keys: ${{ runner.os }}-sonar-scanner
       - name: Setup .NET
@@ -67,16 +66,22 @@ jobs:
           dotnet tool install dotnet-sonarscanner --tool-path ./sonar/scanner
       - name: Restore dependencies
         run: dotnet restore
-      - name: Build and analyze
+      - name: start sonarscanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
           SONAR_TOKEN: ${{ secrets.NETEVENT_SONAR_TOKEN }}
-        shell: pwsh
-        run: |
-          ./sonar/scanner/dotnet-sonarscanner begin /k:"Lan2Play_NetEvent" /o:"lan2play" /d:sonar.login="${{ secrets.NETEVENT_SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet build --no-restore
-          dotnet test --no-build --no-restore
-          ./sonar/scanner/dotnet-sonarscanner end /d:sonar.login="${{ secrets.NETEVENT_SONAR_TOKEN }}"      
+        run:  ./sonar/scanner/dotnet-sonarscanner begin /k:"Lan2Play_NetEvent" /o:"lan2play" /d:sonar.login="${{ secrets.NETEVENT_SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+      - name: dotnet build
+        continue-on-error: true
+        run:  dotnet build --no-restore
+      - name: dotnet test
+        continue-on-error: true
+        run:  dotnet test --no-build --no-restore --collect "XPlat Code Coverage"
+      - name: stop sonarscanner
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          SONAR_TOKEN: ${{ secrets.NETEVENT_SONAR_TOKEN }}
+        run: ./sonar/scanner/dotnet-sonarscanner end /d:sonar.login="${{ secrets.NETEVENT_SONAR_TOKEN }}"      
 
   build_docker_linux_x64:
     runs-on: ubuntu-latest
