--- a/.github/workflows/update_dockerhub.yml
+++ b/.github/workflows/update_dockerhub.yml
@@ -2,6 +2,8 @@ name: Update Docker Hub Description
 
 on:
   push:
+    branches: 
+    - main
     paths:
     - 'README.md'
   workflow_dispatch: # Allows action to be run manually from the Actions tab
