--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -49,14 +49,14 @@ jobs:
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
-          path: ./sonar\cache
+          path: ./sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
       - name: Cache SonarCloud scanner
         id: cache-sonar-scanner
         uses: actions/cache@v3
         with:
-          path: ./sonar\scanner
+          path: ./sonar/scanner
           key: ${{ runner.os }}-sonar-scanner
           restore-keys: ${{ runner.os }}-sonar-scanner
       - name: Setup .NET
@@ -64,11 +64,16 @@ jobs:
         with:
           dotnet-version: 6.x.x
       - name: Install SonarCloud scanner
-        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+        if: steps.cache-sonar-scanner.outputs.cache-hit != 'false'
         shell: pwsh
         run: |
           New-Item -Path ./sonar/scanner -ItemType Directory
           dotnet tool install dotnet-sonarscanner --tool-path ./sonar/scanner
+      - name: update SonarCloud scanner
+        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+        shell: pwsh
+        run: |
+          dotnet tool update dotnet-sonarscanner --tool-path ./sonar/scanner
       - name: Restore dependencies
         run: dotnet restore
       - name: start sonarscanner
