--- a/NetEvent/Server.Tests/NetEvent.Server.Tests.csproj
+++ b/NetEvent/Server.Tests/NetEvent.Server.Tests.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+    <SonarQubeTestProject>false</SonarQubeTestProject>
   </PropertyGroup>
 
   <ItemGroup>
