--- a/NetEvent/Client/NetEvent.Client.csproj
+++ b/NetEvent/Client/NetEvent.Client.csproj
@@ -16,6 +16,10 @@
 		<PackageReference Include="MudBlazor" Version="6.0.9" />
 		<PackageReference Include="MudBlazor.ThemeManager" Version="1.0.6" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
 		<PackageReference Include="System.Reactive" Version="5.0.0" />
 	</ItemGroup>
