--- a/.github/workflows/website_build.yml
+++ b/.github/workflows/website_build.yml
@@ -23,9 +23,7 @@ jobs:
 
   build_only:
     runs-on: ubuntu-latest
-    if: ${{ ((!startsWith(github.ref, 'refs/tags/v')) && (!contains(github.event.head_commit.message, 'forcepublish')) && github.event_name == 'pull_request') || 
-    (((!startsWith(github.ref, 'refs/tags/v')) && (!contains(github.event.head_commit.message, 'forcepublish')) && github.event_name == 'push' )) }}
-
+    if: ${{ ((!startsWith(github.ref, 'refs/tags/v')) && (!contains(github.event.head_commit.message, 'forcepublish')) && github.event_name == 'pull_request') || (((!startsWith(github.ref, 'refs/tags/v')) && (!contains(github.event.head_commit.message, 'forcepublish')) && github.event_name == 'push' )) }}
     steps:
     - uses: actions/checkout@v3
     - uses: addnab/docker-run-action@v3
