--- a/.github/workflows/website_build.yml
+++ b/.github/workflows/website_build.yml
@@ -35,10 +35,8 @@ jobs:
     if: ${{ (startsWith(github.ref, 'refs/tags/v') && github.event_name == 'push') || (contains(github.event.head_commit.message, 'forcepublish') && github.event_name == 'push') }}
     steps:
     - uses: actions/checkout@v3
-    - uses: addnab/docker-run-action@v3
-      with:
-        image: lan2play/docker-sphinxbuild:latest
-        options: -v ${{ github.workspace }}/Docs:/docs -e USERID=$(id -u ${USER}) -e GROUPID=$(id -g ${USER}) 
+     - name: build
+      run: docker run --rm -v ${{ github.workspace }}/Docs:/docs -e USERID=$(id -u ${USER}) -e GROUPID=$(id -g ${USER}) lan2play/docker-sphinxbuild:latest
     - name: Install SSH key
       uses: shimataro/ssh-key-action@v2
       with:
