--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -37,11 +37,8 @@ jobs:
 
   test_linux_x64:
     runs-on: ubuntu-latest
+    if: github.actor !=	'weblate'
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJSON(github) }}
-        run: echo "$GITHUB_CONTEXT"
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -94,6 +91,7 @@ jobs:
 
   build_docker_linux_x64:
     runs-on: ubuntu-latest
+    if: github.actor !=	'weblate'
     needs:
     - test_linux_x64
     steps:
