--- a/NetEvent/Server/NetEvent.Server.csproj
+++ b/NetEvent/Server/NetEvent.Server.csproj
@@ -5,7 +5,12 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UserSecretsId>NetEvent.Server-22C6183C-4927-4801-90E6-4AC1E79183B5</UserSecretsId>
+		<CodeAnalysisRuleSet>..\..\.sonarlint\lan2play_custom.ruleset</CodeAnalysisRuleSet>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <AdditionalFiles Include="..\..\.sonarlint\lan2play_netevent\CSharp\SonarLint.xml" Link="SonarLint.xml" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Client\NetEvent.Client.csproj" />
