--- a/NetEvent/Shared/NetEvent.Shared.csproj
+++ b/NetEvent/Shared/NetEvent.Shared.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
 	  <Nullable>enable</Nullable>
-	  <ImplicitUsings>enable</ImplicitUsings>
+	  <!--<ImplicitUsings>enable</ImplicitUsings>-->
 	  <CodeAnalysisRuleSet>..\..\.sonarlint\lan2play_custom.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
