--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -37,7 +37,7 @@ jobs:
 
   test_linux_x64:
     runs-on: ubuntu-latest
-    if: github.actor !=	'weblate'
+    if: github.actor !=	'lan2play-weblate'
     steps:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -91,7 +91,7 @@ jobs:
 
   build_docker_linux_x64:
     runs-on: ubuntu-latest
-    if: github.actor !=	'weblate'
+    if: github.actor !=	'lan2play-weblate'
     needs:
     - test_linux_x64
     steps:
