--- a/.github/workflows/update_docs_translation.yml
+++ b/.github/workflows/update_docs_translation.yml
@@ -23,6 +23,7 @@ jobs:
     - name: Commit changes
       uses: actions-x/commit@v2
       with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         name: github-actions[bot]
         email: 41898282+github-actions[bot]@users.noreply.github.com
         message: Automatically updated locales
