--- a/.github/workflows/update_docs_translation.yml
+++ b/.github/workflows/update_docs_translation.yml
@@ -11,17 +11,17 @@ on:
 
 jobs:
   regenerate_locales_docs:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     name: Update translation files
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: make gettext
       run: docker run --rm -v ${{ github.workspace }}/Docs:/docs -e USERID=$(id -u ${USER}) -e GROUPID=$(id -g ${USER}) -e MakeCommands=gettext lan2play/docker-sphinxbuild:latest
     - name: intl update
       run: docker run --rm -v ${{ github.workspace }}/Docs:/docs -e USERID=$(id -u ${USER}) -e GROUPID=$(id -g ${USER}) -e Task=intl -e IntlLangs=de,fr lan2play/docker-sphinxbuild:latest  
     - name: Commit changes
-      uses: actions-x/commit@v2
+      uses: actions-x/commit@v2.9
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         name: github-actions[bot]
