--- a/.github/workflows/update_docs_translation.yml
+++ b/.github/workflows/update_docs_translation.yml
@@ -16,6 +16,8 @@ jobs:
     name: Update translation files
     steps:
     - uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.CI_PERSONALACCESSTOKEN }}
     - name: make gettext
       run: docker run --rm -v ${{ github.workspace }}/Docs:/docs -e USERID=$(id -u ${USER}) -e GROUPID=$(id -g ${USER}) -e MakeCommands=gettext lan2play/docker-sphinxbuild:latest
     - name: intl update
