--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -41,6 +41,9 @@ jobs:
     runs-on: ubuntu-latest
     if: github.actor !=	'lan2play-weblate'
     steps:
+      - name : machine echo github
+        env : { CONTENT : "${{ toJson(github) }}" }
+        run : "echo $CONTENT"
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
