--- a/NetEvent/Client/NetEvent.Client.csproj
+++ b/NetEvent/Client/NetEvent.Client.csproj
@@ -38,6 +38,10 @@
 		<ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Components\Administration\" />
+	</ItemGroup>
+
   <PropertyGroup>
     <BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
   </PropertyGroup>
