--- a/.editorconfig
+++ b/.editorconfig
@@ -177,3 +177,9 @@ csharp_style_prefer_switch_expression = true:suggestion
 csharp_style_prefer_pattern_matching = true:silent
 csharp_style_prefer_not_pattern = true:suggestion
 csharp_style_prefer_extended_property_pattern = true:suggestion
+
+
+###############################
+# Analyzer Rules              #
+###############################
+dotnet_diagnostic.RMG020.severity = disabled # Unmapped source property
