--- a/NetEvent/Server/appsettings.Development.json
+++ b/NetEvent/Server/appsettings.Development.json
@@ -2,7 +2,7 @@
   "DBProvider": "sqlite",
   "DBConnection": "Data Source=netevent.db",
   "SteamConfig": {
-    "ApplicationKey": "C5285E3EF5FF61A05A0A2896BD0D7B05"
+    "ApplicationKey": ""
   },
   "Logging": {
     "LogLevel": {
